<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <ImageView
                    android:id="@+id/profilePhoto"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_person_black_24dp"/>

            </RelativeLayout>

            <Button
                android:id="@+id/take_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/take_photo"
                android:background="@color/colorPrimary"/>

            <Button
                android:id="@+id/choose_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/choose_photo"
                android:background="@color/colorPrimary"/>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="24dp"
                    android:text="@string/name_title"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_information"
                    android:textSize="18sp"
                    android:layout_column="1"/>

                <EditText
                    android:id="@+id/nameEditView"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:visibility="gone"
                    android:layout_column="1"
                    android:inputType="text"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="24dp"
                    android:text="@string/surname_title"
                    android:textSize="18sp"
                    android:layout_column="0"/>


                <TextView
                    android:id="@+id/surnameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_information"
                    android:textSize="18sp"
                    android:layout_column="1"/>

                <EditText
                    android:id="@+id/surnameEditView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:visibility="gone"
                    android:layout_column="1"
                    android:inputType="text"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="24dp"
                    android:text="@string/phone_title"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/phoneTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_information"
                    android:textSize="18sp"
                    android:layout_column="1"/>

                <EditText
                    android:id="@+id/phoneEditView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:visibility="gone"
                    android:layout_column="1"
                    android:inputType="phone"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="24dp"
                    android:text="@string/email_title"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/emailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_information"
                    android:textSize="18sp"
                    android:layout_column="1"/>

                <EditText
                    android:id="@+id/emailEditView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:visibility="gone"
                    android:layout_column="1"
                    android:inputType="textEmailAddress"/>
            </TableRow>

            <Button
                android:id="@+id/sign_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:background="@color/colorPrimary"/>
        </TableLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/changeProfileButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:gravity="end|bottom"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_edit"
        app:backgroundTint="@color/colorPrimaryDark"
        android:scaleType="center"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:focusableInTouchMode="false"/>

</RelativeLayout>